--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
