--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "nodemailer": "^6.4.18"
   }
 }
