--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
+    "start": "node build/index.js",
     "start:dev": "nodemon"
   },
   "keywords": [],
@@ -20,7 +20,11 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/node": "^14.14.28",
     "axios": "^0.21.1",
-    "nodemailer": "^6.4.18"
+    "nodemailer": "^6.4.18",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
